--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 <body>
     <div class="music-container">
         <h1 id="playlist-title">Playlist Hashtag</h1>
-        <img id="cover" src="./assets/gusttavolima.png" alt="Gustavo Lima">
+        <img id="cover" alt="Disc Cover">
+        <audio id="audio"></audio>
         <div id="below-cover">
             <div id="song-info">
-                <div>Nome da música</div>
-                <div>Nome da banda</div>
+                <div id="song-name">Nome da música</div>
+                <div id="band-name" class="ligth-color">Nome da banda</div>
             </div>
-            <div id="like" class="button"><i class="bi bi-heart"></i></div>
+            <button id="like" class="button ligth-color"><i class="bi bi-heart"></i></button>
         </div>
-        <div>Barra de progresso</div>
+        <div id="progress-bar">
+            <div id="current-progress"></div>
+        </div>
         <div id="button-container">
-            <div id="shuffle" class="button"><i class="bi bi-shuffle"></i></div>
-            <div id="precious" class="button button-navigate"><i class="bi bi-skip-backward-circle"></i></div>
-            <div id="play" class="button button-biggest"><i class="bi bi-play-circle"></i></div>
-            <div id="next" class="button button-navigate"><i class="bi bi-skip-forward-circle"></i></div>
-            <div id="repeat" class="button"><i class="bi bi-arrow-counterclockwise"></i></div>
+            <button id="shuffle" class="button"><i class="bi bi-shuffle"></i></button>
+            <button id="previous" class="button button-navigate"><i class="bi bi-skip-backward-circle"></i></button>
+            <button id="play" class="button button-biggest"><i class="bi bi-play-circle"></i></button>
+            <button id="next" class="button button-navigate"><i class="bi bi-skip-forward-circle"></i></button>
+            <button id="repeat" class="button"><i class="bi bi-arrow-counterclockwise"></i></button>
         </div>
     </div>
    
+    <script src="/script.js"></script>
 </body>
 </html>
