finalizing-the-features

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <div id="progress-bar">
                 <div id="current-progress"></div>
             </div>
+            <div id="time-box">
+                <div id="song-time">00:00:00</div>
+                <div id="total-time">00:00:00</div>
+            </div>
         </div>
         <div id="button-container">
             <button id="shuffle" class="button"><i class="bi bi-shuffle"></i></button>
